fix: Notificacions y cambio de usuario